# scaffold

./: .gitignore  README.md  setup.cfg  setup.py
src/scaffold/: command_line.py
src/scaffold/data/: flake8.txt  gitignore.txt  mypy.txt  pytest.txt  requirements-dev.txt  setup_cfg.txt  setup_py.txt
