[metadata]
name = scaffold
version = 1.0.1
author = Ke Xue
author_email = xueke.kent@gmail.com
description = Scaffold a project with src layout
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8
zip_safe = False
include_package_data = True
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
scaffold = data/*, py.typed

[options.entry_points]
console_scripts =
    scaffold = scaffold.command_line:main
